--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     {
         "type": "library",
         "license": "proprietary",
-        "name": "pajakguweh/pph21",
+        "name": "ooppp/pph21",
         "authors": [
         {
             "name": "Raji Idham Mahyudin",
